--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
  <html>
  <head>
+ <title>Daily Astrology Readings</title>
+ <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+
+ <link rel="stylesheet" href="style.css"> 
  <script src="https://cdn.tailwindcss.com"></script>
  <script src="script/readings.js"></script>
+ <script src="script/zodiacs.js"></script>
 
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
  </head>
  
  <body>
 
+<!-- header -->
      <div class="min-h-screen bg-gradient-to-br from-indigo-900 via-purple-900 to-pink-900 flex flex-col items-center justify-center p-4">
       <div class="text-center mb-8">
         <h1 class="text-4xl md:text-5xl font-bold text-white mb-2 flex items-center justify-center">
@@ -16,123 +23,99 @@
         <p class="text-white/80 text-lg">Discover what the stars have in store for you</p>
       </div>
  
+ <!-- end header -->
  
- Signs go here
- <div id="readings"></div>
  
- <script>
+<!-- modal pop up -->
  
- let readings = getTodaysReadings("Pisces")
- var readingsDiv = document.getElementById("readings");
- readingsDiv.innerText = readings["today"]
- console.log(readings)
-
- 
- </script>
- 
- <div class="columns">
- 
-  <div class="bg-white/10 backdrop-blur-md rounded-lg p-4 shadow-lg hover:bg-white/20 transition-all duration-300">
-              <Star class="w-6 h-6 text-yellow-300 mb-2" />
-              <h3 class="text-white font-semibold">sign.name</h3>
-              <p class="text-white/80 text-sm">sign.date</p>
-            </div>
-			
- <div class="column"><a href="/aries"><div class="card"><div class="card-image"><figure class="image is-64x64"><img src="https://bulma.io/images/placeholders/64x64.png" alt="Placeholder"/></figure></div><div class="card-content"><p class="title is-6">Aries</p></div></div></a></div><div class="column"><a href="/taurus"><div class="card"><div class="card-image"><figure class="image is-64x64"><img src="https://bulma.io/images/placeholders/64x64.png" alt="Placeholder"/></figure></div><div class="card-content"><p class="title is-6">Taurus</p></div></div></a></div><div class="column"><a href="/gemini"><div class="card"><div class="card-image"><figure class="image is-64x64"><img src="https://bulma.io/images/placeholders/64x64.png" alt="Placeholder"/></figure></div><div class="card-content"><p class="title is-6">Gemini</p></div></div></a></div><div class="column"><a href="/cancer"><div class="card"><div class="card-image"><figure class="image is-64x64"><img src="https://bulma.io/images/placeholders/64x64.png" alt="Placeholder"/></figure></div><div class="card-content"><p class="title is-6">Cancer</p></div></div></a></div><div class="column"><a href="/leo"><div class="card"><div class="card-image"><figure class="image is-64x64"><img src="https://bulma.io/images/placeholders/64x64.png" alt="Placeholder"/></figure></div><div class="card-content"><p class="title is-6">Leo</p></div></div></a></div><div class="column"><a href="/virgo"><div class="card"><div class="card-image"><figure class="image is-64x64"><img src="https://bulma.io/images/placeholders/64x64.png" alt="Placeholder"/></figure></div><div class="card-content"><p class="title is-6">Virgo</p></div></div></a></div><div class="column"><a href="/libra"><div class="card"><div class="card-image"><figure class="image is-64x64"><img src="https://bulma.io/images/placeholders/64x64.png" alt="Placeholder"/></figure></div><div class="card-content"><p class="title is-6">Libra</p></div></div></a></div><div class="column"><a href="/scorpio"><div class="card"><div class="card-image"><figure class="image is-64x64"><img src="https://bulma.io/images/placeholders/64x64.png" alt="Placeholder"/></figure></div><div class="card-content"><p class="title is-6">Scorpio</p></div></div></a></div><div class="column"><a href="/sagittarius/"><div class="card"><div class="card-image"><figure class="image is-64x64"><img src="https://bulma.io/images/placeholders/64x64.png" alt="Placeholder"/></figure></div><div class="card-content"><p class="title is-6">Sagittarius</p></div></div></a></div><div class="column"><a href="/capricorn/"><div class="card"><div class="card-image"><figure class="image is-64x64"><img src="https://bulma.io/images/placeholders/64x64.png" alt="Placeholder"/></figure></div><div class="card-content"><p class="title is-6">Capricorn</p></div></div></a></div><div class="column"><a href="/aquarius/"><div class="card"><div class="card-image"><figure class="image is-64x64"><img src="https://bulma.io/images/placeholders/64x64.png" alt="Placeholder"/></figure></div><div class="card-content"><p class="title is-6">Aquarius</p></div></div></a></div><div class="column"><a href="/pisces/"><div class="card"><div class="card-image"><figure class="image is-64x64"><img src="https://bulma.io/images/placeholders/64x64.png" alt="Placeholder"/></figure></div><div class="card-content"><p class="title is-6">Pisces</p></div></div></a></div>
- 
- aa
- <Star class="w-5 h-5 text-yellow-300 mr-2" />
- 
- bb
-  <div class="w-5 h-5 text-yellow-300 mr-2" />
- </div>
- 
- <button id="myBtn">Click</button>
-
- 
-  <motion.div
-  id="modal"
+  <div id="modal"
       initial={{ opacity: 0, y: 50 }}
       animate={{ opacity: 1, y: 0 }}
       exit={{ opacity: 0, y: 50 }}
       class="fixed inset-0 flex items-center justify-center bg-black/50 backdrop-blur-sm z-50"
 	  	style="display:none"
     >
-      <div 
-        class="bg-white/10 backdrop-blur-md rounded-xl p-8 max-w-2xl w-full mx-4 shadow-2xl"
 
-      >
-        <div class="relative">
-          <img 
-            src={sign.backgroundUrl} 
-            alt={sign.name}
-            class="w-full h-48 object-cover rounded-lg mb-6"
-          />
-          <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent rounded-lg" />
-          <div class="absolute bottom-4 left-4">
-            <h2 class="text-3xl font-bold text-white mb-1">{sign.name}</h2>
-            <div class="flex items-center space-x-4 text-white/80">
-              <div class="flex items-center">
-                <Calendar class="w-4 h-4 mr-1" />
-                <span class="text-sm">{sign.date}</span>
-              </div>
-              <div class="flex items-center">
-                <Droplets class="w-4 h-4 mr-1" />
-                <span class="text-sm">{sign.element}</span>
-              </div>
-            </div>
-          </div>
-        </div>
+<div class="bg-white/10 backdrop-blur-md rounded-xl p-8 max-w-2xl w-full mx-4 shadow-2xl"><div class="relative"><img src="https://images.unsplash.com/photo-1534447677768-be436bb09401?auto=format&amp;fit=crop&amp;q=80" alt="Pisces" class="w-full h-48 object-cover rounded-lg mb-6"><div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent rounded-lg"></div><div class="absolute bottom-4 left-4"><img src="img/starsigns/pisces.svg" class="h-3 w-3"><h2 id="modalSignName" class="text-3xl font-bold text-white mb-1">Pisces</h2><div class="flex items-center space-x-4 text-white/80"><div class="flex items-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-calendar w-4 h-4 mr-1"><path d="M8 2v4"></path><path d="M16 2v4"></path><rect width="18" height="18" x="3" y="4" rx="2"></rect><path d="M3 10h18"></path></svg><span class="text-sm">February 19 - March 20</span></div><div class="flex items-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-droplets w-4 h-4 mr-1"><path d="M7 16.3c2.2 0 4-1.83 4-4.05 0-1.16-.57-2.26-1.71-3.19S7.29 6.75 7 5.3c-.29 1.45-1.14 2.84-2.29 3.76S3 11.1 3 12.25c0 2.22 1.8 4.05 4 4.05z"></path><path d="M12.56 6.6A10.97 10.97 0 0 0 14 3.02c.5 2.5 2 4.9 4 6.5s3 3.5 3 5.5a6.98 6.98 0 0 1-11.91 4.97"></path></svg><span class="text-sm">Water</span></div></div></div></div><div class="space-y-6"><div><h3 class="flex items-center text-xl font-semibold text-white mb-2"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-star w-5 h-5 text-yellow-300 mr-2"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>Today's Horoscope</h3><p class="text-white/80 leading-relaxed">As Pisces, your intuitive powers are heightened today. Trust your gut feelings, especially in matters of the heart. Your ruling planet brings positive energy to your creative endeavors. It's a great time to start that project you've been thinking about.</p></div><div><h3 class="flex items-center text-xl font-semibold text-white mb-2"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-star w-5 h-5 text-yellow-300 mr-2"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>Tomorrow's Horoscope</h3><p class="text-white/80 leading-relaxed">Tomorrow brings new opportunities for Pisces. Your Water element will be particularly strong, helping you navigate any challenges that come your way. Focus on personal growth and don't be afraid to take calculated risks.</p></div></div><button onclick="closeModal()" class="mt-8 w-full bg-white/10 hover:bg-white/20 text-white py-2 rounded-lg transition-colors duration-300">Close</button></div>
 
-        <div class="space-y-6">
-          <div>
-            <h3 class="flex items-center text-xl font-semibold text-white mb-2">
-              <Star class="w-5 h-5 text-yellow-300 mr-2" />
-              Today's Horoscope
-            </h3>
-            <p class="text-white/80 leading-relaxed">{horoscope.today}</p>
-          </div>
+</div>
 
-          <div>
-            <h3 class="flex items-center text-xl font-semibold text-white mb-2">
-              <Star class="w-5 h-5 text-yellow-300 mr-2" />
-              Tomorrow's Horoscope
-            </h3>
-            <p class="text-white/80 leading-relaxed">{horoscope.tomorrow}</p>
-          </div>
-        </div>
-		
- <!--onClick={onClose} -->
-        <button
-         
-          class="mt-8 w-full bg-white/10 hover:bg-white/20 text-white py-2 rounded-lg transition-colors duration-300"
-        >
-          Close
-        </button>
-      </div>
-    </motion.div>
+ <!-- end modal pop up -->
  
-  
+ <!-- body -->
+ <div id="starsigns" class="flex flex-wrap p-8 items-center space-x-2 space-y-2">
+ <div id="myButton">click</a>
+ 
  <script>
- var modal = document.getElementById("modal");
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-
+ 
+  var modal = document.getElementById("modal");
+  var starsigns = document.getElementById("starsigns");
 
 // When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
   if (event.target == modal) {
-    modal.style.display = "none";
+    closeModal();
   }
 } 
+ 
+ function openModal(sign) {
+ 
+ 
+  console.log(sign)
+  let readings = getTodaysReadings(sign.name)
+  var modalSignName = document.getElementById("modalSignName");
+  modalSignName.innerText = sign.name;
+ 
 
+  console.log(readings)
+ 
+   modal.style.display = "flex";
+
+ }
+ 
+ function closeModal() {
+   modal.style.display = "none";
+ }
+ 
+ function buildStarsignCard(sign) {
+ 
+    var element = document.createElement("div");
+	element.classList.add("w-56", "h-28", "bg-white/10", "backdrop-blur-md", "cursor-pointer", "rounded-lg", "p-4", "shadow-lg", "hover:bg-white/20", "transition-all", "duration-300", "starsign")
+	element.innerHTML = `<img src="img/starsigns/${sign.name}.svg" class="w-6 h-6 text-yellow-300 mb-2" />
+              <h3 class="text-white font-semibold">${sign.name}</h3>
+              <p class="text-white/80 text-sm">${sign.date}</p>`
+			  
+
+	element.onclick = function() { openModal(sign); };
+		
+	starsigns.appendChild(element);		
+ }
+ 
+ zodiacSigns.forEach(function(starsign) {
+	buildStarsignCard(starsign)
+ })
+ </script>
+ </div>
+ 
+ 
+ <!-- <div id="readings"></div> -->
+ 
+ <script>
+ 
+ /*
+ let readings = getTodaysReadings("Pisces")
+ var readingsDiv = document.getElementById("readings");
+ var data = getZodiacData("Pisces")
+ console.log(data)
+ readingsDiv.innerText = readings["today"] + data["symbol"]
+ console.log(readings)
+*/
+ 
  </script>
  
+
+ 
+  
  </body>
  
  </html>
